# immigration-per-sector

./: .gitignore  README.md  main.py  pyproject.toml
APICalls/: bls_payroll.py  census_pums_immigration.py  example_bea.py  example_bls.py  example_census_manufacturing.py  example_census_trade.py
Analysis/: example_analysis.py  immigration_growth_analysis.py  ppi_increase_analysis.py
Analysis/quarto/: example_chartbook_analysis.py
Chartbook/: example_chartbook.qmd
Data/meta/: readme.txt
DataProcessing/: create_employment_earnings_immigration_analysis.py  join_pums_bls_naics.py  process_bls_ppi.py  process_pums_immigration.py
Tools/: __init__.py  api_keys.py  gm_formatting.py  path_management.py  util_bea_api.py  util_bls_api.py  util_census_api.py  util_logging.py  util_save_output.py
