[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenmantle-datascience-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Tools*"]
exclude = ["Data*", "Output*", "Analysis*", "APICalls*", "DataProcessing*", "Chartbook*", "Sandbox*"]
